--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
 				</ul>
 				<br><br>
 
+				<f3>Instructor</f3><br>
+				<f3>Heicoder Academy</f3><br>
+				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
+				<ul>
+					<li>Responsible for instructing course AI200 Applied Machine Learning</li>
+				</ul>
+				<br><br>
+
 				<f3>Content Writer</f3><br>
 				<f3>Medium</f3><br>
 				<div class="justifybox"><b>Jan 2022 - Present<div class="nav">Singapore</b></div></div>
@@ -99,6 +107,13 @@
 				<ul>
 					<li>Published on Towards Data Science, Python in Plain English</li>
 				</ul>
+				<br><br>
+
+				<f3>Writer</f3><br>
+				<f3>365 Data Science</f3><br>
+				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
+				<b>Write about all things programming!</b><br>
+				<a href="https://365datascience.com/blog/authors/kay-jan-wong/">Click here to visit my profile</a><br>
 				<br><br>
 
 				<f3>Management Intern</f3><br>
@@ -154,7 +169,7 @@
 			<f1><b>Technical Skills</b></f1><br><br>
 			<div class="mainbody-indent">
 				<f3>Programming Languages/Tools</f3><br>
-				Pyspark, Python (Kivy, Web Scaping), SQL (SQLite, PostgreSQL), R, Java, Go, MongoDB, Cypher<br>
+				Pyspark, Python (Kivy, Web Scaping), SQL (SQLite, PostgreSQL), Java, Scala, R, Go, MongoDB, Cypher<br>
 				Cassandra, Kafka, Redis, VBA, HTML, CSS, JS
 				<br><br>
 				<f3>Data Science Workflow and Deployment Tools</f3><br>
