--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<f3>Medium</f3><br>
 				<div class="justifybox"><b>Jan 2022 - Present<div class="nav">Singapore</b></div></div>
 				<b>Write about all things programming!</b><br>
-				<a href="https://kayjanwong.medium.com/">Click here to visit my profile</a><br>
+				<a href="https://kayjanwong.medium.com/" target="_blank">Click here to visit my profile</a><br>
 				<ul>
 					<li>Published on Towards Data Science, Python in Plain English</li>
 				</ul>
@@ -113,7 +113,7 @@
 				<f3>365 Data Science</f3><br>
 				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
 				<b>Write about all things programming!</b><br>
-				<a href="https://365datascience.com/blog/authors/kay-jan-wong/">Click here to visit my profile</a><br>
+				<a href="https://365datascience.com/blog/authors/kay-jan-wong/" target="_blank">Click here to visit my profile</a><br>
 				<br><br>
 
 				<f3>Management Intern</f3><br>
