--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<br><br>
 
 				<f3>Instructor</f3><br>
-				<f3>Heicoder Academy</f3><br>
+				<f3>Heicoders Academy</f3><br>
 				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
 				<ul>
 					<li>Responsible for instructing course AI200 Applied Machine Learning</li>
