--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
 					<li>Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date</li>
 					<li>Voted top Reusable Asset (RA) in RA Learning Festival 2020</li>
 				</ul>
+				<br><b>Cards MTJ Project</b><br>
+				<ul>
+					<li>Developed end-to-end anomaly detection and forecasting pipeline to predict metrics related to card onboarding journey</li>
+					<li>Deployed solution on QlikView dashboard within 5 months of project inception, making it the first AI-embedded Control Tower within the bank</li>
+				</ul>
 				<br><b>CBG Mortgage Project</b><br>
 				<ul>
 					<li>Developed end-to-end ML solution for mortgage pricing to predict customers’ reprice rate</li>
