--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<f3>DBS, Transformation Group, Analytics Centre of Excellence (ACoE)</f3><br>
 				<div class="justifybox"><b>Aug 2018 - Present<div class="nav">Singapore</b></div></div>
 				Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
-				<br><b>Call Centre Call Reduction Project (CCTR)</b><br>
+				<br><b>CBO Call Centre Call Reduction Project (CCTR)</b><br>
 				<ul>
 					<li>Built, deployed, and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call</li>
 					<li>Initiated and single-handedly improved data and feature engineering pipeline architecture to standardize processing, reduce resource wastage, and increase scalability, resulting in time savings of over 35 hours</li>
@@ -47,7 +47,7 @@
 					<li>Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date</li>
 					<li>Voted top Reusable Asset (RA) in RA Learning Festival 2020</li>
 				</ul>
-				<br><b>Cards MTJ Project</b><br>
+				<br><b>CBO Cards MTJ Project</b><br>
 				<ul>
 					<li>Developed end-to-end anomaly detection and forecasting pipeline to predict metrics related to card onboarding journey</li>
 					<li>Deployed solution on QlikView dashboard within 5 months of project inception, making it the first AI-embedded Control Tower within the bank</li>
