--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
 		<div class="mainbody2" id="experience">
 			<f1><b>Work Experience</b></f1><br><br>
 			<div class="mainbody-indent">
+				<f3>Senior Software Developer</f3><br>
+				<f3>GIC, Technology Group, Risk & Performance Solutions (RPMD)</f3><br>
+				<div class="justifybox"><b>Jul 2022 - Present<div class="nav">Singapore</b></div></div>
+				<br><br>
+
 				<f3>Data Scientist / Machine Learning Engineer</f3><br>
 				<f3>DBS, Transformation Group, Analytics Centre of Excellence (ACoE)</f3><br>
-				<div class="justifybox"><b>Aug 2018 - Present<div class="nav">Singapore</b></div></div>
+				<div class="justifybox"><b>Aug 2018 - Jul 2022<div class="nav">Singapore</b></div></div>
 				Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
 				<br><b>CBO Call Centre Call Reduction Project (CCTR)</b><br>
 				<ul>
