--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 				<f3>Assistant Lecturer</f3><br>
 				<f3>National University of Singapore (NUS), School of Computing</f3><br>
 				<div class="justifybox"><b>Jan 2021 - Present<div class="nav">Singapore</b></div></div>
-				<b>Artificial Intelligence Computing Course (AICC)</b><br>
+				<b>Artificial Intelligence Competency Programme (AICP)</b><br>
 				<ul>
-					<li>Designed to equip NUS Executive and Administrative staff with basic knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
+					<li>Designed to equip NUS Executive and Administrative staff with working knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
 					<li>Responsible for conducting teaching sessions in flipped classroom model and grading of projects</li>
 				</ul>
 				<br><br>
