--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<br><br>
 
 				<f3>Data Scientist / Machine Learning Engineer</f3><br>
-				<f3>DBS, Transformation Group, Analytics Centre of Excellence (ACoE)</f3><br>
+				<f3>DBS, Transformation Group, Analytics Centre of Excellence (ACOE)</f3><br>
 				<div class="justifybox"><b>Aug 2018 - Jul 2022<div class="nav">Singapore</b></div></div>
 				Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
 				<br><b>CBO Call Centre Call Reduction Project (CCTR)</b><br>
@@ -179,7 +179,7 @@
 			<f1><b>Technical Skills</b></f1><br><br>
 			<div class="mainbody-indent">
 				<f3>Programming Languages/Tools</f3><br>
-				Pyspark, Python (Kivy, Web Scaping), SQL (SQLite, PostgreSQL), Java, Scala, R, Go, MongoDB, Cypher<br>
+				Pyspark, Python (Kivy, Web Scaping), SQL (SQLite, PostgreSQL, MSSQL, Oracle, Snowflake), Java, Scala, R, Go, NoSQL (MongoDB, Neo4j)<br>
 				Cassandra, Kafka, Redis, VBA, HTML, CSS, JS
 				<br><br>
 				<f3>Data Science Workflow and Deployment Tools</f3><br>
