--- a/index.html
+++ b/index.html
@@ -32,73 +32,78 @@
 				<div class="justifybox"><b>Jul 2022 - Present<div class="nav">Singapore</b></div></div>
 				<br><br>
 
+				
 				<f3>Data Scientist / Machine Learning Engineer</f3><br>
 				<f3>DBS, Transformation Group, Analytics Centre of Excellence (ACOE)</f3><br>
 				<div class="justifybox"><b>Aug 2018 - Jul 2022<div class="nav">Singapore</b></div></div>
-				Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
-				<br><b>CBO Call Centre Call Reduction Project (CCTR)</b><br>
-				<ul>
-					<li>Built, deployed, and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call</li>
-					<li>Initiated and single-handedly improved data and feature engineering pipeline architecture to standardize processing, reduce resource wastage, and increase scalability, resulting in time savings of over 35 hours</li>
-					<li>Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation, and drive decision making</li>
-					<li>Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data</li>
-				</ul>
-				<br><b>Time Series Forecast Reusable Asset (FORA)</b><br>
-				<ul>
-					<li>Developed forecasting methods for time series, involving EDA, processing, models, and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins</li>
-					<li>Implemented end-to-end forecasting and anomaly detection workflows with CBG, IBG teams across SG, HK teams to forecast trade volume, CASA balances and transactions, metrics related to cards onboarding and more</li>
-					<li>Held workshops, demonstrations, project presentations, and code walkthroughs to business and technical teams from SG, CN, TW, HK and ID</li>
-					<li>Independently created and launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift</li>
-					<li>Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date</li>
-					<li>Voted top Reusable Asset (RA) in RA Learning Festival 2020</li>
-				</ul>
-				<br><b>CBO Cards MTJ Project</b><br>
-				<ul>
-					<li>Developed end-to-end anomaly detection and forecasting pipeline to predict metrics related to card onboarding journey</li>
-					<li>Deployed solution on QlikView dashboard within 5 months of project inception, making it the first AI-embedded Control Tower within the bank</li>
-				</ul>
-				<br><b>CBG Mortgage Project</b><br>
-				<ul>
-					<li>Developed end-to-end ML solution for mortgage pricing to predict customers’ reprice rate</li>
-					<li>Improved existing data pipeline architecture, resulting in 85% time savings</li>
-					<li>Managed project deliverables, deployment plans, and drove project to deployment in 6 months</li>
-				</ul>
-				<br><b>Audit Summarization Project</b><br>
-				<ul>
-					<li>Performed ideation, experimentation, evaluation, and benchmarking of different models for NLP summarization task for Audit issues</li>
-                                        <li>Tested and deployed API solution on GPU in UAT</li>
-				</ul>
-				<br><b>T&M FX Project</b><br>
-				<ul>
-					<li>Developed pipelines to automate campaign analysis, standardizing processing across 2 campaigns and 3 types of campaign analysis</li>
-				</ul>
-				<br><b>Feature Mart Reusable Asset</b><br>
-				<ul>
-					<li>Formalized and implemented Feature Mart which automates feature creation for CBG data and standardizes processing required</li>
-				</ul>
-				<br><b>Other Projects</b><br>
-				<ul>
-					<li>Performed email clustering using different text cleaning and embedding methods and machine learning models</li>
-					<li>Implemented best practices workflow in multiple projects by setting up integration testing of codes and enabling distributed processing</li>
-					<li>Have experience with Kedro-style pipelines</li>
-				</ul>
-				<br><b>Others</b><br>
-				<ul class="award">
-					<li>Spot Award recipient for 2021 Feb, Jun, Oct, and 2022 Apr for exemplary work performance</li>
-                                        <li>Star Award recipient for first half of 2021 for exemplary work performance</li>
-					<li>Second most active Coursera user, based on course completion, in the company in 2018</li>
-					<li>Represented Musicians Interest Group in DBS Dinner and Dance 2019 and 2021, playing keyboard</li>
-				</ul>
+				<div class="paragraph">
+					Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
+					<br><b>CBO Call Centre Call Reduction Project (CCTR)</b><br>
+					<ul>
+						<li>Built, deployed, and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call</li>
+						<li>Initiated and single-handedly improved data and feature engineering pipeline architecture to standardize processing, reduce resource wastage, and increase scalability, resulting in time savings of over 35 hours</li>
+						<li>Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation, and drive decision making</li>
+						<li>Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data</li>
+					</ul>
+					<br><b>Time Series Forecast Reusable Asset (FORA)</b><br>
+					<ul>
+						<li>Developed forecasting methods for time series, involving EDA, processing, models, and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins</li>
+						<li>Implemented end-to-end forecasting and anomaly detection workflows with CBG, IBG teams across SG, HK teams to forecast trade volume, CASA balances and transactions, metrics related to cards onboarding and more</li>
+						<li>Held workshops, demonstrations, project presentations, and code walkthroughs to business and technical teams from SG, CN, TW, HK and ID</li>
+						<li>Independently created and launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift</li>
+						<li>Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date</li>
+						<li>Voted top Reusable Asset (RA) in RA Learning Festival 2020</li>
+					</ul>
+					<br><b>CBO Cards MTJ Project</b><br>
+					<ul>
+						<li>Developed end-to-end anomaly detection and forecasting pipeline to predict metrics related to card onboarding journey</li>
+						<li>Deployed solution on QlikView dashboard within 5 months of project inception, making it the first AI-embedded Control Tower within the bank</li>
+					</ul>
+					<br><b>CBG Mortgage Project</b><br>
+					<ul>
+						<li>Developed end-to-end ML solution for mortgage pricing to predict customers’ reprice rate</li>
+						<li>Improved existing data pipeline architecture, resulting in 85% time savings</li>
+						<li>Managed project deliverables, deployment plans, and drove project to deployment in 6 months</li>
+					</ul>
+					<br><b>Audit Summarization Project</b><br>
+					<ul>
+						<li>Performed ideation, experimentation, evaluation, and benchmarking of different models for NLP summarization task for Audit issues</li>
+						<li>Tested and deployed API solution on GPU in UAT</li>
+					</ul>
+					<br><b>T&M FX Project</b><br>
+					<ul>
+						<li>Developed pipelines to automate campaign analysis, standardizing processing across 2 campaigns and 3 types of campaign analysis</li>
+					</ul>
+					<br><b>Feature Mart Reusable Asset</b><br>
+					<ul>
+						<li>Formalized and implemented Feature Mart which automates feature creation for CBG data and standardizes processing required</li>
+					</ul>
+					<br><b>Other Projects</b><br>
+					<ul>
+						<li>Performed email clustering using different text cleaning and embedding methods and machine learning models</li>
+						<li>Implemented best practices workflow in multiple projects by setting up integration testing of codes and enabling distributed processing</li>
+						<li>Have experience with Kedro-style pipelines</li>
+					</ul>
+					<br><b>Others</b><br>
+					<ul class="award">
+						<li>Spot Award recipient for 2021 Feb, Jun, Oct, and 2022 Apr for exemplary work performance</li>
+						<li>Star Award recipient for first half of 2021 for exemplary work performance</li>
+						<li>Second most active Coursera user, based on course completion, in the company in 2018</li>
+						<li>Represented Musicians Interest Group in DBS Dinner and Dance 2019 and 2021, playing keyboard</li>
+					</ul>
+				</div>
 				<br><br>
 
 				<f3>Assistant Lecturer</f3><br>
 				<f3>National University of Singapore (NUS), School of Computing</f3><br>
 				<div class="justifybox"><b>Jan 2021 - Present<div class="nav">Singapore</b></div></div>
-				<b>Artificial Intelligence Competency Programme (AICP)</b><br>
-				<ul>
-					<li>Designed to equip NUS Executive and Administrative staff with working knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
-					<li>Responsible for conducting teaching sessions in flipped classroom model and grading of projects</li>
-				</ul>
+				<div class="paragraph">
+					<b>Artificial Intelligence Competency Programme (AICP)</b><br>
+					<ul>
+						<li>Designed to equip NUS Executive and Administrative staff with working knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
+						<li>Responsible for conducting teaching sessions in flipped classroom model and grading of projects</li>
+					</ul>
+				</div>
 				<br><br>
 
 				<f3>Instructor</f3><br>
@@ -112,64 +117,78 @@
 				<f3>Content Writer</f3><br>
 				<f3>Medium</f3><br>
 				<div class="justifybox"><b>Jan 2022 - Present<div class="nav">Singapore</b></div></div>
-				<b>Write about all things programming!</b><br>
-				<a href="https://kayjanwong.medium.com/" target="_blank">Click here to visit my profile</a><br>
-				<ul>
-					<li>Published on Towards Data Science, Python in Plain English</li>
-				</ul>
+				<div class="paragraph">
+					<b>Write about all things programming!</b><br>
+					<a href="https://kayjanwong.medium.com/" target="_blank">Click here to visit my profile</a><br>
+					<ul>
+						<li>Published on Towards Data Science, Python in Plain English</li>
+					</ul>
+				</div>
 				<br><br>
 
 				<f3>Writer</f3><br>
 				<f3>365 Data Science</f3><br>
 				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
-				<b>Write about all things programming!</b><br>
-				<a href="https://365datascience.com/blog/authors/kay-jan-wong/" target="_blank">Click here to visit my profile</a><br>
+				<div class="paragraph">
+					<b>Write about all things programming!</b><br>
+					<a href="https://365datascience.com/blog/authors/kay-jan-wong/" target="_blank">Click here to visit my profile</a><br>
+				</div>
 				<br><br>
 
 				<f3>Management Intern</f3><br>
 				<f3>KPMG, Advisory, IT Assurance and Security (ITAS)</f3><br>
 				<div class="justifybox"><b>May 2017 - Jul 2017<div class="nav">Singapore</b></div></div>
-				<ul>
-					<li>Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability</li>
-					<li>Attended professional training courses in assurance reporting and SAP modules</li>
-					<li>Exposed to banking risk management, custody, data analytics, global financial services, prime brokerage, private equity, securitization, treasury and various frameworks</li>
-				</ul>
-				<ul class="award" style="margin-top: 0;">
-					<li>Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion</li>
-				</ul>
+				<div class="paragraph">
+					<ul>
+						<li>Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability</li>
+						<li>Attended professional training courses in assurance reporting and SAP modules</li>
+						<li>Exposed to banking risk management, custody, data analytics, global financial services, prime brokerage, private equity, securitization, treasury and various frameworks</li>
+					</ul>
+					<ul class="award" style="margin-top: 0;">
+						<li>Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion</li>
+					</ul>
+				</div>
 				<br><br>
 
 				<f3><b>Music Teacher</b></f3><br>
 				<f3>Cristofori</f3><br>
 				<div class="justifybox"><b>Dec 2017 - Jul 2018<div class="nav">Singapore</b></div></div>
-				<ul>
-					<li>Conduct electronic keyboard lessons for under-privileged children at Providence Care Centre</li>
-				</ul>
+				<div class="paragraph">
+					<ul>
+						<li>Conduct electronic keyboard lessons for under-privileged children at Providence Care Centre</li>
+					</ul>
+				</div>
 				<br><br>
 
 				<f3>Campus Ambassador</f3><br>
 				<f3>Deutsche Bank</f3><br>
 				<div class="justifybox"><b>Aug 2016 - Aug 2017<div class="nav">Singapore</b></div></div>
-				<ul>
-					<li>Assist in building networks within campus and with the employer brand and recruitment team at Deutsche Bank</li>
-					<li>Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies</li>
-				</ul>
+				<div class="paragraph">
+					<ul>
+						<li>Assist in building networks within campus and with the employer brand and recruitment team at Deutsche Bank</li>
+						<li>Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies</li>
+					</ul>
+				</div>
 				<br><br>
 
 				<f3><b>Daycare Tutor</b></f3><br>
 				<f3>Dajin Daycare</f3><br>
 				<div class="justifybox"><b>Dec 2014 - Apr 2015<div class="nav">Singapore</b></div></div>
-				<ul>
-					<li>Nurtured primary school children, up to a class of 20 students, and taught the students English, Mathematics, Science and Mother Tongue (Mandarin) with 100% passing rate</li>
-					<li>Tutored the weaker students personally after daycare working hours to help the students understand the main concepts and catch up with the rest of the class</li>
-				</ul>
+				<div class="paragraph">
+					<ul>
+						<li>Nurtured primary school children, up to a class of 20 students, and taught the students English, Mathematics, Science and Mother Tongue (Mandarin) with 100% passing rate</li>
+						<li>Tutored the weaker students personally after daycare working hours to help the students understand the main concepts and catch up with the rest of the class</li>
+					</ul>
+				</div>
 				<br><br>
 
 				<f3>Private Tutor</f3><br>
 				<div class="justifybox"><b>Dec 2014 - Oct 2015<div class="nav">Singapore</b></div></div>
-				<ul>
-					<li>Provide one-to-one private tuition for Junior College Mathematics and Primary School English, Mathematics and Science</li>
-				</ul>
+				<div class="paragraph">
+					<ul>
+						<li>Provide one-to-one private tuition for Junior College Mathematics and Primary School English, Mathematics and Science</li>
+					</ul>
+				</div>
 				<br><br>
 			</div>
 		</div>
