--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
 				<div class="justifybox"><b>Jul 2022 - Present<div class="nav">Singapore</b></div></div>
 				<br><br>
 
-				
 				<f3>Data Scientist / Machine Learning Engineer</f3><br>
 				<f3>DBS, Transformation Group, Analytics Centre of Excellence (ACOE)</f3><br>
 				<div class="justifybox"><b>Aug 2018 - Jul 2022<div class="nav">Singapore</b></div></div>
-				<div class="paragraph">
+				<div class="paragraph small-paragraph">
 					Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
 					<br><b>CBO Call Centre Call Reduction Project (CCTR)</b><br>
 					<ul>
@@ -97,7 +96,7 @@
 				<f3>Assistant Lecturer</f3><br>
 				<f3>National University of Singapore (NUS), School of Computing</f3><br>
 				<div class="justifybox"><b>Jan 2021 - Present<div class="nav">Singapore</b></div></div>
-				<div class="paragraph">
+				<div class="paragraph small-paragraph">
 					<b>Artificial Intelligence Competency Programme (AICP)</b><br>
 					<ul>
 						<li>Designed to equip NUS Executive and Administrative staff with working knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
@@ -109,15 +108,17 @@
 				<f3>Instructor</f3><br>
 				<f3>Heicoders Academy</f3><br>
 				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
-				<ul>
-					<li>Responsible for instructing course AI200 Applied Machine Learning</li>
-				</ul>
+				<div class="paragraph small-paragraph">
+					<ul>
+						<li>Responsible for instructing course AI200 Applied Machine Learning</li>
+					</ul>
+				</div>
 				<br><br>
 
 				<f3>Content Writer</f3><br>
 				<f3>Medium</f3><br>
 				<div class="justifybox"><b>Jan 2022 - Present<div class="nav">Singapore</b></div></div>
-				<div class="paragraph">
+				<div class="paragraph small-paragraph">
 					<b>Write about all things programming!</b><br>
 					<a href="https://kayjanwong.medium.com/" target="_blank">Click here to visit my profile</a><br>
 					<ul>
@@ -129,7 +130,7 @@
 				<f3>Writer</f3><br>
 				<f3>365 Data Science</f3><br>
 				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
-				<div class="paragraph">
+				<div class="paragraph small-paragraph">
 					<b>Write about all things programming!</b><br>
 					<a href="https://365datascience.com/blog/authors/kay-jan-wong/" target="_blank">Click here to visit my profile</a><br>
 				</div>
@@ -138,7 +139,7 @@
 				<f3>Management Intern</f3><br>
 				<f3>KPMG, Advisory, IT Assurance and Security (ITAS)</f3><br>
 				<div class="justifybox"><b>May 2017 - Jul 2017<div class="nav">Singapore</b></div></div>
-				<div class="paragraph">
+				<div class="paragraph small-paragraph">
 					<ul>
 						<li>Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability</li>
 						<li>Attended professional training courses in assurance reporting and SAP modules</li>
@@ -153,7 +154,7 @@
 				<f3><b>Music Teacher</b></f3><br>
 				<f3>Cristofori</f3><br>
 				<div class="justifybox"><b>Dec 2017 - Jul 2018<div class="nav">Singapore</b></div></div>
-				<div class="paragraph">
+				<div class="paragraph small-paragraph">
 					<ul>
 						<li>Conduct electronic keyboard lessons for under-privileged children at Providence Care Centre</li>
 					</ul>
@@ -163,7 +164,7 @@
 				<f3>Campus Ambassador</f3><br>
 				<f3>Deutsche Bank</f3><br>
 				<div class="justifybox"><b>Aug 2016 - Aug 2017<div class="nav">Singapore</b></div></div>
-				<div class="paragraph">
+				<div class="paragraph small-paragraph">
 					<ul>
 						<li>Assist in building networks within campus and with the employer brand and recruitment team at Deutsche Bank</li>
 						<li>Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies</li>
@@ -174,7 +175,7 @@
 				<f3><b>Daycare Tutor</b></f3><br>
 				<f3>Dajin Daycare</f3><br>
 				<div class="justifybox"><b>Dec 2014 - Apr 2015<div class="nav">Singapore</b></div></div>
-				<div class="paragraph">
+				<div class="paragraph small-paragraph">
 					<ul>
 						<li>Nurtured primary school children, up to a class of 20 students, and taught the students English, Mathematics, Science and Mother Tongue (Mandarin) with 100% passing rate</li>
 						<li>Tutored the weaker students personally after daycare working hours to help the students understand the main concepts and catch up with the rest of the class</li>
@@ -184,7 +185,7 @@
 
 				<f3>Private Tutor</f3><br>
 				<div class="justifybox"><b>Dec 2014 - Oct 2015<div class="nav">Singapore</b></div></div>
-				<div class="paragraph">
+				<div class="paragraph small-paragraph">
 					<ul>
 						<li>Provide one-to-one private tuition for Junior College Mathematics and Primary School English, Mathematics and Science</li>
 					</ul>
