--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 				<f3>Senior Software Developer</f3><br>
 				<f3>GIC, Technology Group, Risk & Performance Solutions (RPMD)</f3><br>
 				<div class="justifybox"><b>Jul 2022 - Present<div class="nav">Singapore</b></div></div>
+				<div class="paragraph small-paragraph">
+					<br><b>Enterprise Risk</b><br>
+					<ul>
+						<li>Developed Python packages and backend APIs for computing risk and performance numbers for top-of-the-house reporting</li>
+					</ul>
+				</div>
 				<br><br>
 
 				<f3>Data Scientist / Machine Learning Engineer</f3><br>
@@ -43,6 +49,7 @@
 						<li>Initiated and single-handedly improved data and feature engineering pipeline architecture to standardize processing, reduce resource wastage, and increase scalability, resulting in time savings of over 35 hours</li>
 						<li>Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation, and drive decision making</li>
 						<li>Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data</li>
+						<li>Published in IJCNN 2020 Personalized Digital Customer Services for Consumer Banking Call Centre using Neural Networks</li>
 					</ul>
 					<br><b>Time Series Forecast Reusable Asset (FORA)</b><br>
 					<ul>
@@ -57,6 +64,7 @@
 					<ul>
 						<li>Developed end-to-end anomaly detection and forecasting pipeline to predict metrics related to card onboarding journey</li>
 						<li>Deployed solution on QlikView dashboard within 5 months of project inception, making it the first AI-embedded Control Tower within the bank</li>
+						<li>Published in ACM 2022 Improving Operational Efficiency through Predicting Credit Card Application Turnaround Time with Index-based Encoding</li>
 					</ul>
 					<br><b>CBG Mortgage Project</b><br>
 					<ul>
