--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<f3>National University of Singapore (NUS), School of Computing</f3><br>
 				<div class="justifybox"><b>Jan 2021 - Present<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
-					<b>Artificial Intelligence Competency Programme (AICP)</b><br>
+					<b>Artificial Intelligence Competency Course (AICC)</b><br>
 					<ul>
 						<li>Designed to equip NUS Executive and Administrative staff with working knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
 						<li>Responsible for conducting teaching sessions in flipped classroom model and grading of projects</li>
