--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 			<f1><b>Technical Skills</b></f1><br><br>
 			<div class="mainbody-indent">
 				<f3>Programming Languages/Tools</f3><br>
-				Pyspark, Python (Kivy, Web Scaping), SQL (SQLite, PostgreSQL, MSSQL, Oracle, Snowflake), Java, Scala, R, Go, NoSQL (MongoDB, Neo4j)<br>
+				Pyspark, Python, SQL (SQLite, PostgreSQL, MSSQL, Oracle, Snowflake), Java, Scala, R, Go, NoSQL (MongoDB, Neo4j)<br>
 				Cassandra, Kafka, Redis, VBA, HTML, CSS, JS
 				<br><br>
 				<f3>Data Science Workflow and Deployment Tools</f3><br>
@@ -219,8 +219,8 @@
 				<f3>Project Management</f3><br>
 				Jira, Git, Bitbucket, Confluence
 				<br><br>
-				<f3>Web and Mobile Development</f3><br>
-				Flask, Dash, Flutter, Dart
+				<f3>Web Development</f3><br>
+				Flask, Dash
 				<br><br>
 				<f3>Microsoft Office</f3><br>
 				Microsoft Excel (Palisade, @Risk), Power Point, Visio, Word
