--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="paragraph small-paragraph">
 					<br><b>Enterprise Risk</b><br>
 					<ul>
-						<li>Developed Python packages and backend APIs for computing risk and performance numbers for top-of-the-house reporting</li>
+						<li>Developed open-source Python packages and backend APIs for computing risk and performance numbers for top-of-the-house reporting</li>
 					</ul>
 				</div>
 				<br><br>
