--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="banner">
 			<div class="banner-name">
 				<f1>Kay Jan</f1>&nbsp;<f1 style="color: #fff; font-size:200%;">Wong</f1><br>
-				<f2>Financial Services, Data Scientist</f2>
+				<f2>Software Developer, Data Scientist</f2>
 			</div>
 			<div style="text-align:right;">
 				<span class="banner-link">
@@ -33,7 +33,7 @@
 				<div class="paragraph small-paragraph">
 					<br><b>Enterprise Risk</b><br>
 					<ul>
-						<li>Developed open-source Python packages and backend APIs for computing risk and performance numbers for top-of-the-house reporting</li>
+						<li>Developed open-source and in-house Python packages and backend APIs for computing risk and performance numbers for top-of-the-house reporting</li>
 					</ul>
 				</div>
 				<br><br>
