--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="paragraph small-paragraph">
 					<br><b>Enterprise Risk</b><br>
 					<ul>
-						<li>Developed open-source and in-house Python packages and backend APIs for computing risk and performance numbers for top-of-the-house reporting</li>
+						<li>Developed open-source and in-house Python packages, computation engines, and backend APIs for computing risk, performance, and exposure numbers for top-of-the-house reporting</li>
 					</ul>
 				</div>
 				<br><br>
@@ -96,7 +96,7 @@
 						<li>Spot Award recipient for 2021 Feb, Jun, Oct, and 2022 Apr for exemplary work performance</li>
 						<li>Star Award recipient for first half of 2021 for exemplary work performance</li>
 						<li>Second most active Coursera user, based on course completion, in the company in 2018</li>
-						<li>Represented Musicians Interest Group in DBS Dinner and Dance 2019 and 2021, playing keyboard</li>
+						<li>Represented Musicians Interest Group in DBS Dinner and Dance 2019 and 2021, playing keyboard in a live band</li>
 					</ul>
 				</div>
 				<br><br>
@@ -130,6 +130,7 @@
 					<b>Write about all things programming!</b><br>
 					<a href="https://kayjanwong.medium.com/" target="_blank">Click here to visit my profile</a><br>
 					<ul>
+						<li>Most read story has over 100K views</li>
 						<li>Published on Towards Data Science, Python in Plain English</li>
 					</ul>
 				</div>
@@ -207,7 +208,7 @@
 			<f1><b>Technical Skills</b></f1><br><br>
 			<div class="mainbody-indent">
 				<f3>Programming Languages/Tools</f3><br>
-				Pyspark, Python, SQL (SQLite, PostgreSQL, MSSQL, Oracle, Snowflake), Java, Scala, R, Go, NoSQL (MongoDB, Neo4j)<br>
+				Python (FastAPI, sklearn), Pyspark, SQL (SQLite, PostgreSQL, MSSQL, Oracle, Snowflake), Java, Scala, R, Go, NoSQL (MongoDB, Neo4j)<br>
 				Cassandra, Kafka, Redis, VBA, HTML, CSS, JS
 				<br><br>
 				<f3>Data Science Workflow and Deployment Tools</f3><br>
