--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<li>Developed forecasting methods for time series, involving EDA, processing, models, and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins</li>
 						<li>Implemented end-to-end forecasting and anomaly detection workflows with CBG, IBG teams across SG, HK teams to forecast trade volume, CASA balances and transactions, metrics related to cards onboarding and more</li>
 						<li>Held workshops, demonstrations, project presentations, and code walkthroughs to business and technical teams from SG, CN, TW, HK and ID</li>
-						<li>Independently created and launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift</li>
+						<li>Independently created and launched an enterprise-wide web application encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift</li>
 						<li>Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date</li>
 						<li>Voted top Reusable Asset (RA) in RA Learning Festival 2020</li>
 					</ul>
