--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 				<div class="paragraph small-paragraph">
 					<br><b>Enterprise Risk</b><br>
 					<ul>
-						<li>Developed open-source and in-house Python packages, computation engines, and backend APIs for computing risk, performance, and exposure numbers for top-of-the-house reporting</li>
+						<li>Enhanced departments’ capability of computing risk, performance, and exposure metrics for top-of-the-house reporting by developing in-house Python packages, computation engines, and backend APIs</li>
+						<li>Drive project progress by orchestrating coordination between developers and end users, ensuring timely delivery ahead of milestones</li>
+						<li>Ideated and developed open-source Python package for working with tree data structures, with over 80 GitHub stars to date</li>
 					</ul>
 				</div>
 				<br><br>
@@ -107,8 +109,8 @@
 				<div class="paragraph small-paragraph">
 					<b>Artificial Intelligence Competency Course (AICC)</b><br>
 					<ul>
-						<li>Designed to equip NUS Executive and Administrative staff with working knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
-						<li>Responsible for conducting teaching sessions in flipped classroom model and grading of projects</li>
+						<li>Equipped over 300 NUS Executive and Administrative staff with working knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
+						<li>Conducted teaching sessions in flipped classroom model and project grading</li>
 					</ul>
 				</div>
 				<br><br>
