--- a/index.html
+++ b/index.html
@@ -103,18 +103,6 @@
 				</div>
 				<br><br>
 
-				<f3>Assistant Lecturer</f3><br>
-				<f3>National University of Singapore (NUS), School of Computing</f3><br>
-				<div class="justifybox"><b>Jan 2021 - Present<div class="nav">Singapore</b></div></div>
-				<div class="paragraph small-paragraph">
-					<b>Artificial Intelligence Competency Course (AICC)</b><br>
-					<ul>
-						<li>Equipped over 300 NUS Executive and Administrative staff with working knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
-						<li>Conducted teaching sessions in flipped classroom model and project grading</li>
-					</ul>
-				</div>
-				<br><br>
-
 				<f3>Instructor</f3><br>
 				<f3>Heicoders Academy</f3><br>
 				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
@@ -138,9 +126,21 @@
 				</div>
 				<br><br>
 
+				<f3>Assistant Lecturer</f3><br>
+				<f3>National University of Singapore (NUS), School of Computing</f3><br>
+				<div class="justifybox"><b>Jan 2021 - Oct 2023<div class="nav">Singapore</b></div></div>
+				<div class="paragraph small-paragraph">
+					<b>Artificial Intelligence Competency Course (AICC)</b><br>
+					<ul>
+						<li>Equipped over 300 NUS Executive and Administrative staff with working knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
+						<li>Conducted teaching sessions in flipped classroom model and project grading</li>
+					</ul>
+				</div>
+				<br><br>
+
 				<f3>Writer</f3><br>
 				<f3>365 Data Science</f3><br>
-				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
+				<div class="justifybox"><b>Jun 2022 - Jul 2022<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
 					<b>Write about all things programming!</b><br>
 					<a href="https://365datascience.com/blog/authors/kay-jan-wong/" target="_blank">Click here to visit my profile</a><br>
