--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<br><b>Enterprise Risk</b><br>
 					<ul>
 						<li>Enhanced departments’ capability of computing risk, performance, and exposure metrics for top-of-the-house reporting by developing in-house Python packages, computation engines, and backend APIs</li>
-						<li>Drive project progress by orchestrating coordination between developers and end users, ensuring timely delivery ahead of milestones</li>
+						<li>Drove project progress by orchestrating coordination between developers and end users, gathering requirements from end users and scoping the work, ensuring timely delivery ahead of milestones</li>
 						<li>Ideated and developed open-source Python package for working with tree data structures, with over 80 GitHub stars to date</li>
 					</ul>
 				</div>
