--- a/index.html
+++ b/index.html
@@ -103,12 +103,22 @@
 				</div>
 				<br><br>
 
-				<f3>Instructor</f3><br>
+		                <f3>Instructor</f3><br>
 				<f3>Heicoders Academy</f3><br>
 				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
 					<ul>
-						<li>Responsible for instructing course AI200 Applied Machine Learning</li>
+						<li>Responsible for instructing AI200 Applied Machine Learning course</li>
+					</ul>
+				</div>
+				<br><br>
+		
+		                <f3>Teaching Assistant</f3><br>
+		                <f3>General Assembly</f3><br>
+				<div class="justifybox"><b>Dec 2023 - Present<div class="nav">Singapore</b></div></div>
+				<div class="paragraph small-paragraph">
+					<ul>
+						<li>Responsible for grading assignments for Software Engineering Immersive Flex (SEIF) course</li>
 					</ul>
 				</div>
 				<br><br>
